--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Sektor</title>
 
     <link href="//fonts.googleapis.com/css?family=Roboto:400,300,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="/public/css/reset.css">
-    <link rel="stylesheet" href="/public/css/prism.css">
-    <link rel="stylesheet" href="/public/css/styles.css">
+    <link rel="stylesheet" href="public/css/reset.css">
+    <link rel="stylesheet" href="public/css/prism.css">
+    <link rel="stylesheet" href="public/css/styles.css">
 
-    <link rel="stylesheet" href="/dist/sektor.min.css">
+    <link rel="stylesheet" href="dist/sektor.min.css">
 
-    <script src="/public/js/prism.js"></script>
-    <script src="/public/js/main.js"></script>
+    <script src="public/js/prism.js"></script>
+    <script src="public/js/main.js"></script>
   </head>
   <body>
 
