add checkbox & radio. other fixes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="main">
         <h1 class="lead-text"><b>Sektor</b> — a lightweight responsive CSS framework.</h1>
-        <p class="lead-text">Skeletor is very simple and easy to use in the CSS framework. The size of the framework is <b>only 2kb (gzipped)</b>! This framework contains a set of the most important UI-components for developing a interface for your project. Hope you enjoy!</p>
+        <p class="lead-text">Sektor is very simple and easy to use in the CSS framework. The size of the framework is <b>only 2kb (gzipped)</b>! This framework contains a set of the most important UI-components for developing a interface for your project. Hope you enjoy!</p>
       </div>
 
       <h3 class="title">Buttons with border</h3>
@@ -31,7 +31,7 @@
 <button>Default</button>
 <button class="o-primary">Primary</button>
 <button class="o-primary rounded">Rounded</button>
-<button class="o-primary pointed">Rounded</button>
+<button class="o-primary pointed">Pointed</button>
       </div>
 
       <h3 class="title">Buttons with background</h3>
@@ -52,6 +52,42 @@
 <button class="small">Default</button>
 <button class="small primary">Primary</button>
       </div>
+
+      <h3 class="title">Checkbox</h3>
+      <div class="components-group components-group--checkbox">
+<div>
+  <input id="checkbox-1" type="checkbox" value="value1">
+  <label for="checkbox-1">Checkbox</label>
+</div>
+
+<div>
+  <input checked id="checkbox-2" type="checkbox" value="value2">
+  <label for="checkbox-2">Checkbox (checked)</label>
+</div>
+
+<div>
+  <input checked disabled id="checkbox-3" type="checkbox" value="value3">
+  <label for="checkbox-3">Checkbox (disabled)</label>
+</div>
+     </div>
+
+     <h3 class="title">Radio</h3>
+     <div class="components-group components-group--checkbox">
+<div>
+ <input id="radio-1" type="radio" name="radio" value="radio-value1">
+ <label for="radio-1">Radio Button</label>
+</div>
+
+<div>
+ <input checked id="radio-2" type="radio" name="radio" value="radio-value2">
+ <label for="radio-2">Radio Button (checked)</label>
+</div>
+
+<div>
+ <input disabled id="radio-3" type="radio" name="radio" value="radio-value3">
+ <label for="radio-3">Radio Button (disabled)</label>
+</div>
+    </div>
 
       <h3 class="title">Inputs</h3>
       <div class="components-group">
