--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
         <p class="lead-text">Sektor is very simple and easy to use in the CSS framework. The size of the framework is <b>only 2kb (gzipped)</b>! This framework contains a set of the most important UI-components for developing a interface for your project. Hope you enjoy!</p>
       </div>
 
+      <h3 class="title">Typography</h3>
+
+      <h4>Paragraph</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, unde porro cum nulla magnam praesentium ullam, minus eligendi atque iusto tempora inventore dolorem voluptatibus at ex fugit fuga dolorum culpa.</p>
+
+      <h4>Lead text</h4>
+      <p class="lead-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, unde porro cum nulla magnam praesentium ullam, minus eligendi atque iusto tempora inventore dolorem voluptatibus at ex fugit fuga dolorum culpa.</p>
+
+      <h3 class="title">Headings</h3>
+      <h1>Heading</h1>
+      <h2>Heading</h2>
+      <h3>Heading</h3>
+      <h4>Heading</h4>
+      <h5>Heading</h5>
+
+      <br>
+      <br>
+
       <h3 class="title">Buttons with border</h3>
 
       <div class="components-group">
@@ -90,34 +108,46 @@
     </div>
 
       <h3 class="title">Inputs</h3>
-      <div class="components-group">
-<input class="full-width" type="text" placeholder="Enter tour text...">
-<input class="full-width primary" type="text" placeholder="Enter tour text...">
-<input class="full-width success" type="text" placeholder="Enter tour text...">
-<input class="full-width warning" type="text" placeholder="Enter tour text...">
-<input class="full-width error" type="text" placeholder="Enter tour text...">
+      <div class="components-group components-group--inputs">
+        <input type="text" placeholder="Enter your text...">
+
+<input disabled type="text" placeholder="This input disabled...">
+
+<input class="rounded" type="text" placeholder="Rounded input...">
+
+<input type="password" placeholder="Enter your password..." value="qwerty123">
+
+<input class="primary" type="text" placeholder="Enter your text...">
+
+<input class="success" type="text" placeholder="Enter your text...">
+
+<input class="warning" type="text" placeholder="Enter your text...">
+
+<input class="error" type="text" placeholder="Enter your text...">
+
+<textarea name="name" rows="8" cols="80" placeholder="Enter your message..."></textarea>
       </div>
 
       <h3 class="title">Notifications</h3>
       <div class="components-group">
 <div class="notification">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel placeat, quibusdam reiciendis aliquid consectetur sed commodi beatae consequuntur dolorem voluptatum modi fugiat architecto omnis porro unde neque quod vitae esse!</div>
 
-<div class="notification notification--primary">
+<div class="notification primary">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel placeat, quibusdam reiciendis aliquid consectetur sed commodi beatae consequuntur dolorem voluptatum modi fugiat architecto omnis porro unde neque quod vitae esse!</p>
   <i class="close"></i>
 </div>
 
-<div class="notification notification--success">
+<div class="notification success">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel placeat.</p>
   <i class="close"></i>
 </div>
 
-<div class="notification notification--warning">
+<div class="notification warning">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
   <i class="close"></i>
 </div>
 
-<div class="notification notification--error">
+<div class="notification error">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel placeat, quibusdam reiciendis aliquid consectetur sed commodi beatae consequuntur dolorem voluptatum modi fugiat architecto omnis porro unde neque quod vitae esse!</p>
   <i class="close"></i>
 </div>
