--- a/index.html
+++ b/index.html
@@ -47,15 +47,18 @@
 
       <div class="components-group">
 <button>Default</button>
+<a class="button">Link button</a>
 <button class="o-primary">Primary</button>
 <button class="o-primary rounded">Rounded</button>
 <button class="o-primary pointed">Pointed</button>
+<button class="clear">Clear</button>
+<a class="button clear">Clear link</a>
       </div>
 
       <h3 class="title">Buttons with background</h3>
       <div class="components-group">
 <button class="primary">Default</button>
-<button class="success">Success</button>
+<a class="button success">Link button</a>
 <button class="warning">Warning</button>
 <button class="error">Error</button>
       </div>
